--- a/public/drive/style.css
+++ b/public/drive/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 #wrapper {
     font-family: "Roboto", sans-serif;
     margin-left: 140px;
@@ -108,8 +112,19 @@
     font-size: 20px;
 }
 
+#wrapper .dropzone p {
+    max-height: 30px;
+    overflow: hidden;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
 #wrapper .dropzone p.hidden {
-    display: none;
+    max-height: 0px;
+    opacity: 0;
 }
 
 #wrapper .dropzone input {
@@ -130,8 +145,8 @@
 
 #wrapper .dropzone .progress {
     width: 200px;
-    height: 15px;
-    background-color: rgba(0, 0, 0, .2);
+    height: 7px;
+    background-color: rgba(0, 0, 0, .1);
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -139,7 +154,8 @@
     -o-border-radius: 5px;
     float: left;
     overflow: hidden;
-    max-width: 200px;
+    max-height: 15px;
+    margin-top: 5px;
     transition: .2s ease;
     -webkit-transition: .2s ease;
     -moz-transition: .2s ease;
@@ -148,20 +164,21 @@
 }
 
 #wrapper .dropzone .progress.hidden {
-    max-width: 0px;
+    max-height: 0px;
+    opacity: 0;
 }
 
 #wrapper .dropzone .progress > div {
     width: 20%;
     height: 100%;
-    background-color: #667;
+    background-color: #0074D9;
     border-right: 3px solid #fff;
     box-sizing: border-box;
-    floa
+    float: left;
 }
 
 #wrapper .dropzone .progress > div.done {
-    background-color: #0074D9;
+    background-color: rgba(0, 0, 0, .1);
 }
 
 #wrapper .dropzone .progress > div.hidden {
@@ -177,6 +194,31 @@
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     border-right: none;
+}
+
+#wrapper .dropzone h5 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    color: #0074D9;
+    float: left;
+    max-height: 30px;
+    width: 300px;
+    margin-top: 5px;
+    overflow: hidden;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+#wrapper .dropzone h5.hidden {
+    max-height: 0px;
+    opacity: 0;
+}
+
+#wrapper .dropzone h5 .loaded {
+    opacity: .6;
 }
 
 #wrapper .path {
@@ -302,8 +344,8 @@
 }
 
 #wrapper .files .title p {
+    text-align: right;
     display: block;
-    float: left;
 }
 
 #wrapper .files .title p svg {
@@ -332,12 +374,14 @@
     -o-transform: rotate(180deg);
 }
 
-#wrapper .files .title p span {
-    float: left;
+#wrapper .files .title p svg {
+    float: right;
 }
 
-#wrapper .files .title p.name { width: 440px; }
-#wrapper .files .title p.mtime { width: 270px; }
+#wrapper .files .title p.name { float: left; }
+#wrapper .files .title p.size { float: right; width: 180px; margin-right: 35px; }
+#wrapper .files .title p.mtime { float: right; width: 260px; }
+#wrapper .files .title p.ext { float: right; }
 
 #wrapper .files .list {
     margin-top: 10px;
@@ -373,7 +417,7 @@
 }
 
 #wrapper .files .list a {
-    padding: 10px 10px;
+    padding: 10px;
     padding-bottom: 20px;
     height: 20px;
     display: block;
@@ -381,16 +425,45 @@
     max-height: 80px;
     overflow: hidden;
     white-space: nowrap;
-    transition: .2s ease;
-    -webkit-transition: .2s ease;
-    -moz-transition: .2s ease;
-    -ms-transition: .2s ease;
-    -o-transition: .2s ease;
+    transition: max-height .2s ease, padding .2s ease, opacity .15s ease, box-shadow .4s ease;
+    -webkit-transition: max-height .2s ease, padding .2s ease, opacity .15s ease, box-shadow .4s ease;
+    -moz-transition: max-height .2s ease, padding .2s ease, opacity .15s ease, box-shadow .4s ease;
+    -ms-transition: max-height .2s ease, padding .2s ease, opacity .15s ease, box-shadow .4s ease;
+    -o-transition: max-height .2s ease, padding .2s ease, opacity .15s ease, box-shadow .4s ease;
+    cursor: default;
+}
+
+#wrapper .files .list a.converting {
+    opacity: .5;
+}
+
+#wrapper .files .list a.selected {
+    background-color: rgba(0, 116, 217, .13);
+    border-bottom: 1px solid transparent;
 }
 
 #wrapper .files .list a.hide {
     max-height: 0px;
+    padding: 0px 10px;
     opacity: 0;
+}
+
+#wrapper .files .list a.hidden {
+    opacity: .3;
+}
+
+#wrapper .files .list a.shadow {
+    border-bottom: 2px solid transparent;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, .2);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+#wrapper .files .list a.shadow input {
+    cursor: text;
 }
 
 #wrapper .files .list a:last-of-type {
@@ -406,16 +479,28 @@
     float: left;
 }
 
-#wrapper .files .list a h4 {
+#wrapper .files .list a .img {
+    height: 30px;
+    width: 30px;
+    background-size: cover;
+    float: left;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+#wrapper .files .list a input {
+    font-size: 18px;
     font-weight: 400;
     display: inline-block;
     margin-left: 20px;
-    margin-top: 3px;
     color: #222;
-}
-
-#wrapper .files .list a h4 span {
-    color: #777;
+    border: none;
+    outline: none;
+    cursor: default;
+    background: transparent;
 }
 
 #wrapper .files .list a p {
@@ -424,9 +509,14 @@
     text-align: right;
 }
 
-#wrapper .files .list a h4.name {font-size: 18px; width: 380px;}
-#wrapper .files .list a p.mtime {width: 200px;}
-#wrapper .files .list a p.size {width: 150px;}
+#wrapper .files .list a.selected input, #wrapper .files .list a.selected p {
+    color: #0074D9;
+}
+
+#wrapper .files .list a input.name {font-size: 18px; width: 380px;}
+#wrapper .files .list a p.mtime {margin-top: 4px; float: right; width: 260px;}
+#wrapper .files .list a p.size {margin-top: 4px; float: right; width: 180px; margin-right: 30px;}
+#wrapper .files .list a p.ext {margin-top: 4px; float: right; }
 
 #ctx {
     font-family: "Roboto", sans-serif;
@@ -518,8 +608,105 @@
     border-top: 1px solid transparent;
 }
 
+#ctx a.next-feature {
+    opacity: .4;
+    cursor: default;
+}
+
+#ctx a.next-feature:hover {
+    background-color: transparent;
+}
+
 #ctx a svg {
     fill: #46464e;
     width: 24px;
     margin-right: 10px;
+}
+
+#viewer {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .75);
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+#viewer.hidden {
+    opacity: 0;
+}
+
+#viewer .header {
+    font-family: "Roboto", sans-serif;
+    color: #fff;
+    fill: #fff;
+    padding: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+#viewer .header > svg {
+    width: 40px;
+    padding: 5px;
+    margin-right: 35px;
+    float: left;
+}
+
+#viewer .header .back {
+    margin-top: -3px;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+}
+
+#viewer .header .back:hover {
+    background-color: rgba(255, 255, 255, .2);
+}
+
+#viewer .header .icon {
+    width: 35px;
+    margin-right: 20px;
+}
+
+#viewer .header > h4 {
+    font-size: 25px;
+    margin-top: 5px;
+}
+
+#viewer .plyr--video, #viewer .plyr--audio {
+    width: 50%;
+    background-color: #fff;
+}
+
+#viewer .view {
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, .5);
+}
+
+#viewer .hidden {
+    display: none;
+}
+
+#viewer img {
+    margin-top: 30px;
+    max-height: 70%;
+    max-width: 80%;
+}
+
+#viewer iframe {
+    width: 60%;
+    height: 70%;
+    background-color: #fff;
 }
