--- a/public/update/style.css
+++ b/public/update/style.css
@@ -277,3 +277,16 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     -ms-transition: .2s ease;
     -o-transition: .2s ease;
 }
+
+#progress.loading .bar-wrapper .bar div {
+    width: 20%;
+    background-color: #222;
+    animation: progressBar 2s ease;
+    -webkit-animation: progressBar 2s ease;
+}
+
+@keyframes progressBar {
+    0% { margin-left: 0%; }
+    50% { margin-left: 80%; }
+    100% { margin-left: 0%; }
+}
