--- a/public/update/style.css
+++ b/public/update/style.css
@@ -281,12 +281,13 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
 #progress.loading .bar-wrapper .bar div {
     width: 20%;
     background-color: #222;
-    animation: progressBar 2s ease infinite;
-    -webkit-animation: progressBar 2s ease infinite;
+    animation: progressBar 1.2s ease-in-out infinite;
+    -webkit-animation: progressBar 1.2s ease-in-out infinite;
 }
 
 @keyframes progressBar {
-    0% { margin-left: 0%; }
-    50% { margin-left: 80%; }
-    100% { margin-left: 0%; }
+    0% { margin-left: 0%; width: 0%; }
+    20% { width: 20%; }
+    80% { width: 20%; }
+    100% { margin-left: 100%; width: 0%; }
 }
