--- a/public/update/style.css
+++ b/public/update/style.css
@@ -82,6 +82,38 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     color: #667;
 }
 
+#done a {
+    font-family: "Roboto", sans-serif;
+    display: block;
+    text-decoration: none;
+    color: #444;
+    fill: #555;
+    padding: 10px 15px;
+    margin-top: 25px;
+    border: 2px solid rgba(0, 0, 0, .3);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+#done a:hover {
+    border: 2px solid rgba(0, 0, 0, .6);
+    color: #222;
+}
+
+#done a svg {
+    width: 24px;
+    float: left;
+}
+
+#done a span {
+    font-size: 18px;
+    display: block;
+    margin-left: 34px;
+}
+
 /* Update needed
 ==================== */
 
