--- a/public/login/style.css
+++ b/public/login/style.css
@@ -3,16 +3,11 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     padding: 0px;
 }
 
-:root {
-    --accent: rgba(0, 0, 0, .1);
-    --accent-dark: #222;
-    --accent-shadow: rgba(102, 88, 0, .6);
-
-    --red: #FF4136;
-}
-
-#side {
-    z-index: 10;
+.side-wrapper {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 999;
 }
 
 #wrapper {
