--- a/public/nav.css
+++ b/public/nav.css
@@ -4,10 +4,11 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
 }
 
 :root {
-    --accent: #ffdd00;
+    --bg: #fff;
+    --accent: #0099ff;
     --accent-dark: #665800;
     --accent-shadow: rgba(102, 88, 0, .6);
-    --player-color: #ffdd00;
+    --player-color: #0099ff;
 
     --red: #FF4136;
 }
@@ -25,20 +26,65 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     font-family: "Roboto", sans-serif;
     width: 100%;
     padding: 10px;
+    top: 0;
+    position: fixed;
+    background-color: #fff;
     box-sizing: border-box;
-    transition: opacity .3s ease, transform .3s ease;
-    -webkit-transition: opacity .3s ease, transform .3s ease;
-    -moz-transition: opacity .3s ease, transform .3s ease;
-    -ms-transition: opacity .3s ease, transform .3s ease;
-    -o-transition: opacity .3s ease, transform .3s ease;
+    transition: opacity .3s ease, transform .3s ease, box-shadow .2s ease;
+    -webkit-transition: opacity .3s ease, transform .3s ease, box-shadow .2s ease;
+    -moz-transition: opacity .3s ease, transform .3s ease, box-shadow .2s ease;
+    -ms-transition: opacity .3s ease, transform .3s ease, box-shadow .2s ease;
+    -o-transition: opacity .3s ease, transform .3s ease, box-shadow .2s ease;
+    z-index: 10;
+}
+
+#nav.shadow {
+    box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
+}
+
+#nav .icon {
+    fill: var(--accent-dark);
+    text-align: center;
+    height: 38px;
+    margin: 5px 30px;
+    float: left;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+#nav:not(.shadow) .icon {
+    margin: 10px 30px;
+}
+
+#nav .icon path {
+    fill: none;
+    stroke-width: 12px;
+    stroke: rgba(0, 0, 0, .3);
+}
+
+#nav .icon path.filled {
+    fill: #4c4a53;
+    stroke-width: 0px;
 }
 
 #nav .logo {
     height: 30px;
-    margin-top: 15px;
-    margin-left: calc(80px + 48px);
+    margin-top: 12px;
+    margin-left: 20px;
     padding-right: 5px;
     float: left;
+    transition: .15s ease;
+    -webkit-transition: .15s ease;
+    -moz-transition: .15s ease;
+    -ms-transition: .15s ease;
+    -o-transition: .15s ease;
+}
+
+#nav:not(.shadow) .logo {
+    margin-top: 15px;
 }
 
 #nav .logo .nitro {
@@ -55,7 +101,7 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
 }
 
 #nav .search {
-    width: calc(100% - 700px);
+    width: calc(100% - 600px);
     height: 48px;
     margin-left: 50px;
     background-color: rgba(0, 0, 0, .07);
@@ -239,40 +285,89 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     -o-border-radius: 5px;
 }
 
+.side-wrapper {
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: fixed;
+    display: flex;
+    align-items: center;
+}
+
 #side {
     font-family: "Roboto", sans-serif;
     float: left;
-    background-color: var(--accent);
-    position: fixed;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 96px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    width: 100px;
+    max-height: 600px;
+    overflow: hidden;
+    transition: .3s ease;
+    -webkit-transition: .3s ease;
+    -moz-transition: .3s ease;
+    -ms-transition: .3s ease;
+    -o-transition: .3s ease;
+    z-index: 999;
 }
 
-#side .logo {
-    fill: var(--accent-dark);
-    text-align: center;
-    width: 100%;
-    height: 38px;
-    position: absolute;
-    top: 24px;
+#side.hidden {
+    max-height: 70px;
+    padding: 0px;
+    top: 50px;
+    background-color: transparent;
+}
+
+.bg {
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    z-index: 0;
+    background-color: #0099ff;
+    transition: .18s ease;
+    -webkit-transition: .18s ease;
+    -moz-transition: .18s ease;
+    -ms-transition: .18s ease;
+    -o-transition: .18s ease;
+    transform: translateX(30px) translateY(15px);
+    -webkit-transform: translateX(30px) translateY(15px);
+    -moz-transform: translateX(30px) translateY(15px);
+    -ms-transform: translateX(30px) translateY(15px);
+    -o-transform: translateX(30px) translateY(15px);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.bg.hidden {
+    opacity: 0;
+    transform: translateX(-40px) translateY(15px);
+    -webkit-transform: translateX(-40px) translateY(15px);
+    -moz-transform: translateX(-40px) translateY(15px);
+    -ms-transform: translateX(-40px) translateY(15px);
+    -o-transform: translateX(-40px) translateY(15px);
+}
+
+.bg.selected {
+    opacity: 0;
+    transform: translateX(30px) translateY(15px) scale(1.5);
+    -webkit-transform: translateX(30px) translateY(15px) scale(1.5);
+    -moz-transform: translateX(30px) translateY(15px) scale(1.5);
+    -ms-transform: translateX(30px) translateY(15px) scale(1.5);
+    -o-transform: translateX(30px) translateY(15px) scale(1.5);
+}
+
+.bg.soon {
+    background-color: #c6c6dd;
 }
 
 #side a {
+    text-align: center;
     text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0px 20px;
-    height: 70px;
+    display: block;
+    height: 50px;
+    padding-bottom: 10px;
     fill: #333;
-    color: #444;
-    box-sizing: border-box;
+    color: #ffd6d3;
     cursor: pointer;
 }
 
@@ -284,91 +379,59 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     -o-transform: translateX(-300px);
 }
 
-#side a:not(.selected):hover {
-    background-color: rgba(0, 0, 0, .05);
+#side a:not(.selected):hover svg {
+    fill: var(--bg);
 }
 
 #side a.selected {
-    fill: var(--accent-dark);
-    color: var(--accent-dark);
+    cursor: default;
 }
 
-#side a.settings {
+#side a::before {
+    content: "";
+    width: 5px;
+    height: 20px;
     position: absolute;
-    bottom: 0;
-    width: 100%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: var(--accent);
+    margin-top: 25px;
+    margin-left: -35px;
+    transition: .4s ease;
+    -webkit-transition: .4s ease;
+    -moz-transition: .4s ease;
+    -ms-transition: .4s ease;
+    -o-transition: .4s ease;
+}
+
+#side a.selected::before {
+    margin-left: -28px;
 }
 
 #side a svg {
-    fill: var(--accent-dark);
+    fill: #667;
     width: 24px;
-    height: 24px;
+    margin-top: 13px;
+    padding: 10px;
     overflow: hidden;
-    transition: .15s ease;
-    -webkit-transition: .15s ease;
-    -moz-transition: .15s ease;
-    -ms-transition: .15s ease;
-    -o-transition: .15s ease;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    transition: .18s ease;
+    -webkit-transition: .18s ease;
+    -moz-transition: .18s ease;
+    -ms-transition: .18s ease;
+    -o-transition: .18s ease;
 }
 
 #side a.selected svg {
-    margin-top: 6px;
-    width: 24px;
-    height: 6px;
-    background-color: currentColor;
-    border-radius: 40px;
-    -webkit-border-radius: 40px;
-    -moz-border-radius: 40px;
-    -ms-border-radius: 40px;
-    -o-border-radius: 40px;
+    fill: var(--accent);
 }
 
-#side a.selected:hover svg {
-    width: 12px;
-    height: 12px;
-    margin-top: 0px;
-}
-
-#side a p {
-    max-height: 0px;
-    overflow: hidden;
-    white-space: nowrap;
-    transition: .3s ease;
-    -webkit-transition: .3s ease;
-    -moz-transition: .3s ease;
-    -ms-transition: .3s ease;
-    -o-transition: .3s ease;
-    opacity: 0;
-    transform: translateY(5px);
-    -webkit-transform: translateY(5px);
-    -moz-transform: translateY(5px);
-    -ms-transform: translateY(5px);
-    -o-transform: translateY(5px);
-}
-
-#side a.selected p {
-    transform: translateY(0px);
-    -webkit-transform: translateY(0px);
-    -moz-transform: translateY(0px);
-    -ms-transform: translateY(0px);
-    -o-transform: translateY(0px);
-    opacity: 1;
-    max-height: 40px;
-    margin-bottom: 10px;
-}
-
-#side a.end p::after {
-    background-image: linear-gradient( to left, var(--accent), rgba(255,255,255,0));
-    height: 20px;
-    width: 30px;
-    display: inline-block;
-    margin-left: -30px;
-    content: '';
-    transform: translateY(5px);
-    -webkit-transform: translateY(5px);
-    -moz-transform: translateY(5px);
-    -ms-transform: translateY(5px);
-    -o-transform: translateY(5px);
+#side a.soon svg {
+    fill: #b8bac7;
 }
 
 #notif {
@@ -945,7 +1008,7 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     max-height: 0px;
 }
 
-#messages .header > svg {
+#messages .header > svg:not(.new) {
     margin: 20px 15px 0px 20px;
     width: 48px;
     float: left;
@@ -956,6 +1019,32 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     font-weight: 400;
     font-size: 20px;
     margin-top: 25px;
+    float: left;
+}
+
+#messages .header > .new {
+    background-color: #0099ff;
+    float: right;
+    margin-top: 20px;
+    margin-right: 25px;
+    border-radius: 20px;
+    width: 24px;
+    padding: 7px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    fill: #fff;
+    cursor: pointer;
+    transition: .1s ease;
+    -webkit-transition: .1s ease;
+    -moz-transition: .1s ease;
+    -ms-transition: .1s ease;
+    -o-transition: .1s ease;
+}
+
+#messages .header .new:hover {
+    background-color: #0074D9;
 }
 
 #messages .header .list {
@@ -1464,4 +1553,225 @@ html, body, a, b, p, div, span, h1, h2, h3, h4, h5, h6, code, svg {
     -moz-border-radius: 30px;
     -ms-border-radius: 30px;
     -o-border-radius: 30px;
+}
+
+#users {
+    font-family: "Roboto", sans-serif;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, .4);
+    z-index: 20;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+#users.hidden {
+    opacity: 0;
+}
+
+#users > div {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, .15);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    width: 350px;
+    transition: .1s ease;
+    -webkit-transition: .1s ease;
+    -moz-transition: .1s ease;
+    -ms-transition: .1s ease;
+    -o-transition: .1s ease;
+}
+
+#users.hidden > div {
+    transform: translateY(-20px);
+    -webkit-transform: translateY(-20px);
+    -moz-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    -o-transform: translateY(-20px);
+}
+
+#users > div .input {
+    height: 50px;
+}
+
+#users > div .input svg {
+    width: 24px;
+    margin-top: 15px;
+    margin-left: 15px;
+    fill: #444;
+    float: left;
+}
+
+#users > div .input input {
+    font-size: 18px;
+    text-indent: 10px;
+    width: calc(100% - 40px);
+    border: none;
+    padding: 0;
+    height: 100%;
+    float: left;
+    border-top-right-radius: 5px;
+}
+
+#users > div .list {
+    overflow: hidden;
+    white-space: nowrap;
+    height: 160px;
+    padding: 0px 10px;
+    scrollbar-color: rgba(0, 0, 0, .3) transparent;
+    scrollbar-width: thin;
+}
+
+#users > div .list:hover {
+    overflow-x: auto;
+}
+
+#users > div .list div {
+    width: 120px;
+    margin: 10px 0px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    cursor: default;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+#users > div .list div.hidden {
+    opacity: 0;
+    width: 0;
+}
+
+#users > div .list div.checked {
+    background-color: rgba(0, 153, 255, 0.15);
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+}
+
+#users > div .list div.checked h4 {
+    color: #0074D9;
+}
+
+#users > div .list div.checked .img {
+    box-shadow: 0px 2px 5px rgba(0, 153, 255, 0.692);
+}
+
+#users > div .list div.checked:hover {
+    background-color: rgba(0, 153, 255, 0.3);
+}
+
+#users > div .list div:hover {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+#users > div .list div .img {
+    background-position: center;
+    width: 80px;
+    height: 80px;
+    background-size: cover;
+    margin-bottom: 0;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, .3);
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+}
+
+#users > div .list div h4 {
+    margin-bottom: 5px;
+    transition: .15s ease;
+    -webkit-transition: .15s ease;
+    -moz-transition: .15s ease;
+    -ms-transition: .15s ease;
+    -o-transition: .15s ease;
+}
+
+#users > div .list div h4 span {
+    display: block;
+    font-size: 15px;
+    opacity: .5;
+}
+
+#users > div .buttons {
+    padding: 10px;
+    height: 40px;
+}
+
+#users > div .buttons a {
+    margin-left: 30px;
+    cursor: pointer;
+    float: right;
+}
+
+#users > div .buttons .next {
+    background-color: #0059ff;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    transition: .15s ease;
+    -webkit-transition: .15s ease;
+    -moz-transition: .15s ease;
+    -ms-transition: .15s ease;
+    -o-transition: .15s ease;
+}
+
+#users > div .buttons .next svg {
+    width: 24px;
+    fill: #fff;
+    margin-right: -5px;
+    margin-left: 10px;
+    float: right;
+}
+
+#users > div .buttons .next:hover {
+    background-color: #003fb4;
+}
+
+#users > div .buttons .next.invalid {
+    opacity: .5;
+}
+
+#users > div .buttons .next span {
+    font-family: "Lexend Deca", sans-serif;
+    font-size: 15px;
+    opacity: .7;
+}
+
+#users > div .buttons .cancel {
+    margin-top: 10px;
+    color: #444;
+}
+
+#users > div .buttons .cancel:hover {
+    color: #222;
+    border-bottom: 2px solid #222;
 }
