--- a/public/feeds/style.css
+++ b/public/feeds/style.css
@@ -20,7 +20,7 @@
 }
 
 #wrapper .feeds .list > div {
-    display: inline-block;
+    float: left;
     padding: 15px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -57,6 +57,14 @@
 #wrapper .feeds .list div p {
     font-size: 15px;
     color: #222;
+}
+
+#wrapper > .episodes > h1 {
+    font-family: "Lexend Deca", sans-serif;
+    font-size: 30px;
+    font-weight: 400;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 #wrapper .episodes .list {
@@ -107,7 +115,8 @@
 
 #wrapper .episodes .list div svg {
     display: none;
-    width: 48px;
+    width: 35px;
+    padding: 7px;
     margin-top: 7px;
     margin-left: 17px;
     position: absolute;
@@ -118,15 +127,30 @@
     -moz-border-radius: 50px;
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
+    cursor: pointer;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
 }
 
 #wrapper .episodes .list div:hover svg {
     display: block;
 }
 
+#wrapper .episodes .list div svg:hover {
+    fill: rgba(0, 0, 0, .5);
+}
+
 #wrapper .episodes .list div h4 {
     font-size: 22px;
     font-weight: 600;
+    cursor: pointer;
+}
+
+#wrapper .episodes .list div h4:hover {
+    text-decoration: underline;
 }
 
 #wrapper .episodes .list div a {
@@ -138,4 +162,50 @@
 
 #wrapper .episodes .list div a:hover {
     text-decoration: underline;
+}
+/* 42 / Player / @player
+============================ */
+#player {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+#player.hidden {
+    opacity: 0;
+    transform: translateX(250px);
+    -webkit-transform: translateX(250px);
+    -moz-transform: translateX(250px);
+    -ms-transform: translateX(250px);
+    -o-transform: translateX(250px);
+}
+
+#player .plyr__controls {
+    box-shadow: 0 3px 10px rgba(0, 0, 0, .3);
+    margin-right: 50px;
+    float: left;
+}
+
+#player > svg {
+    width: 35px;
+    position: absolute;
+    bottom: 8px;
+    right: 5px;
+    padding: 3px;
+    float: right;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    cursor: pointer;
+}
+
+#player > svg:hover {
+    background-color: rgba(0, 0, 0, .2);
 }
